fixed line-breaks in menus

--- a/client/sass/globals/_components.scss
+++ b/client/sass/globals/_components.scss
@@ -136,6 +136,7 @@ ul.menu {
     position: relative;
     display: inline-block;
     width: $menuWidth/2;
+    white-space: nowrap;
     @include transition(1s $defaultCurve);
     @include transition-property(left, right);
     
